# llm_eval_testing_cicd

./: README.md  pyproject.toml
.github/workflows/: llm_eval.yml
notebooks/: run_all_evals.py
src/my_agent/: __init__.py  agent.py
tests/: conftest.py  test_component_level.py  test_e2e_multi_turn.py  test_e2e_single_turn.py
tests/eval_data/: component_dataset.json  golden_dataset.json  multi_turn_dataset.json
